sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane#length__false22/errors.dfrouter
Error: Not numerical length definition in lane '2_1'.
Quitting (on error).
